# master_and_servant

./: Cargo.toml  README.md
master/: Cargo.toml  README.md
master/examples/: cmd.rs  cmd_cobs.rs  cmd_crc_cobs.rs  cmd_crc_cobs_lib.rs  corncobs_test.rs  hello.rs
master/src/: lib.rs
servant/: Cargo.toml  Embed.toml  README.md  build.rs  openocd.cfg  probe.gdb
servant/.cargo/: config.toml
servant/examples/: adc.rs  blinky.rs  blinky_rtt.rs  cmd.rs  cmd_cobs.rs  cmd_crc_cobs.rs  cmd_crc_cobs_lib.rs  cmd_pwm_adc.rs  cmd_pwm_adc_write.rs  pwm_adc.rs  uart_cdc.rs  uart_cdc_cmd.rs  uart_cdc_echo.rs  uart_cdc_fast.rs  uart_cdc_fast_echo.rs
src/: lib.rs
