[package]
name = "master_and_servant"
version = "0.1.0"
edition = "2021"
authors = ["per.lindgren@ltu.se"]
license = "MIT OR Apache-2.0"

[workspace]

members = ["master", "servant"]

# We are using edition 2021, so indicate workspace.resolver = "2"
resolver = "2"

# Not entirely sure why we can't have this in the member crates
[profile.dev]
debug = true
lto = true

[dependencies]
serde = { version = "1.0.188", default-features = false }
serde_derive = "1.0.188"
