[package]
name = "servant"
version = "0.1.0"
edition = "2021"
authors = ["per.lindgren@ltu.se"]
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m-rtic = "1.1.4"
cortex-m = { version = "0.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
panic-halt = "0.2"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = { version = "0.4.0" }
# usbd-serial = "0.1.1"
# heapless = "0.7"
ssmarshal = { version = "1.0.0", default-features = false }
corncobs = "0.1.3"
nb = "1.1.0"
crc = "3.0.1"
dwt-systick-monotonic = "1.1.0"

[dependencies.atsamx7x-hal]
version = "0.4.2"
features = ["same70q21b-rt", "unproven", "reconfigurable-system-pins"]

[dependencies.master_and_servant]
path = "../"

[profile.dev]
opt-level = "s"
lto = true

[profile.release]
opt-level = 2
debug = true
lto = true
codegen-units = 1
